[package]
name = "pathfinder_immersive_demo"
version = "0.1.0"
edition = "2018"
authors = ["Alan Jeffrey <ajeffrey@mozilla.com>"]

[dependencies]
gl = "0.6"
rayon = "1.0"
usvg = "0.4"
egl = { version = "0.2", optional = true }
glutin = { version = "0.19", optional = true }
log = "0.4"
smallvec = "0.6"

[lib]
crate-type = ["staticlib"]

[features]
glwindow = ["glutin"]
magicleap = ["egl"]

[dependencies.pathfinder_demo]
path = "../common"

[dependencies.pathfinder_geometry]
path = "../../geometry"

[dependencies.pathfinder_gl]
path = "../../gl"

[dependencies.pathfinder_gpu]
path = "../../gpu"

[dependencies.pathfinder_renderer]
path = "../../renderer"

[dependencies.pathfinder_simd]
path = "../../simd"

[dependencies.pathfinder_svg]
path = "../../svg"

[dependencies.pathfinder_ui]
path = "../../ui"
